fix: 修复 table align 头部失效

--- a/components/table/style/index.scss
+++ b/components/table/style/index.scss
@@ -217,10 +217,6 @@
     > table {
       position: relative;
     }
-
-    &__title {
-      display: flex;
-    }
   }
 
   &__header--sticky {
